--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
     <!--====== PROJECT GALLERY PART ENDS ======-->
 
-    
+
     <!--====== TESTIMONIAL PART START ======-->
 
     <section id="testimonial" class="testimonial-area pt-70 pb-120">
@@ -585,7 +585,7 @@
                     <div class="testimonial-left-content mt-45 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
                         <div class="section-title">
                             <h6 class="sub-title">Testimonials</h6>
-                            <h4 class="title">What Handy Users Say About Us</h4>
+                            <h4 class="title">What Handy Users <span>Say About Us.</span> </h4>
                         </div>
                         <!-- section title -->
                         <ul class="testimonial-line">
@@ -704,6 +704,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                    <div class="section-title pb-20  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                        <h6 class="sub-title">Partners</h6>
+                        <h4 class="title">Building a better world <span>Together.</span></h4>
+                    </div>
                     <div class="brand-wrapper pt-70 clearfix">
                         <div class="single-brand mt-50 text-md-left wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <img src="assets/images/brand-1.png" alt="brand">
