--- a/index.html
+++ b/index.html
@@ -143,13 +143,6 @@
                 </div>
                 <!-- row -->
             </div>
-            <!-- container -->
-            <!-- <div class="header-hero-image d-flex align-items-center wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="1.1s">
-                <div class="image">
-                    <img src="./assets/images/logo 4.png" alt="Hero Image">
-                </div>
-            </div> -->
-            <!-- header hero image -->
         </div>
         <!-- header hero -->
     </header>
@@ -193,7 +186,7 @@
                                             <span class="shape-2"></span>
                                         </div>
                                         <div class="counter-content media-body">
-                                            <span class="counter-count"><span class="counter"> 5,000</span></span>
+                                            <span class="counter-count"><span class="counter">5,000</span></span>
                                             <p class="text">Handy Clients</p>
                                         </div>
                                     </div>
@@ -1058,4 +1051,4 @@
 
 </body>
 
-</html>.
+</html>
