--- a/assets/login/index.html
+++ b/assets/login/index.html
@@ -37,7 +37,7 @@
 
                 <form class="login100-form validate-form">
                     <a href="C:\Users\olufemiadejugbe\Documents\Personal Development\Projects\Handy without React\index.html">
-                        <i class="fa fa-arrow-left"></i> Back home
+                        <i class="fa fa-arrow-left"></i> Handy home
                     </a>
                     <span class="login100-form-title p-b-43">
 					
