--- a/assets/login/index.html
+++ b/assets/login/index.html
@@ -36,7 +36,7 @@
             <div class="wrap-login100">
 
                 <form class="login100-form validate-form">
-                    <a href="https://github.com/TobiD-S/Handy-without-React/blob/master/index.html">
+                    <a href="https://tobid-s.github.io/Handy-without-React/">
                         <i class="fa fa-arrow-left"></i> Handy home
                     </a>
                     <span class="login100-form-title p-b-43">
